testpod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    app: example-pod
spec:
  containers:
  - name: test-pod
    image: tutum/hello-world
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
